Renomeando curso de Angular para  Integração Contínua

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li>Html</li>
         <li>Css</li>
         <li>Javascript</li>
-        <li>Angular</li>
+        <li>Integração Contínua: Maturidade e Produtividade</li>
     </ul>
 </body>
 </html>
